<resources>
    <string name="app_name">Cata</string>

    <string name="add_to_do_fab">Add TODO</string>
    <string name="select_priority">Select Priority</string>

    <!--  FOR TESTING PURPOSE  -->
    <string name="priority_select_dialog_test_tag">PRIORITY_SELECT_DIALOG</string>
    <string name="to_do_overlay_test_tag">TO_DO_OVERLAY</string>
    <string name="to_do_overlay_dismiss_test_tag">TO_DO_OVERLAY_DISMISS</string>
    <string name="to_do_add_button_test_tag">TO_DO_ADD_BUTTON</string>
    <string name="to_do_title_text_field_test_tag">TODO_TITLE_TEST_FIELD</string>
    <string name="to_do_description_text_field_test_tag">TODO_DESCRIPTION_TEST_FIELD</string>
</resources>